--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
 	<link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/bootstrap-reset.css" rel="stylesheet" type="text/css">
 	<link href="css/owl.carousel.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<div class="cover">
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-79665711-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+
+	<div id="home" class="cover">
 		<div class="navbar">
 			<div class="container">
 				<div class="navbar-header">
@@ -23,11 +35,17 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#"><span>samuelchagas.</span></a>
+					<a class="navbar-brand" href="#">
+						<span>samuelchagas.</span>
+						<div class="front-dev">Desenvolvedor Front-End</div>
+					</a>
 				</div>
 				<div class="collapse navbar-collapse" id="navbar-ex-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active">
+							<a href="#home">Home</a>
+						</li>
+						<li>
 							<a href="#about">Sobre</a>
 						</li>
 						<li>
@@ -46,9 +64,6 @@
 				<div class="col-md-12 text-center">
 					<h1 class="text-inverse">samuelchagas.</h1>
 					<p class="text-inverse">HTML . CSS . Javascript . jQuery . Bootstrap . AngularJS</p>
-					<br>
-					<br>
-					<a class="btn btn-lg btn-primary">Click me</a>
 				</div>
 			</div>
 		</div>
@@ -58,7 +73,6 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1 class="text-primary">Sobre</h1>
-					<h3>About</h3>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
 						ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
 						dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
@@ -120,6 +134,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<p class="text-center">samueldaschagas@gmail.com</p>
+						<p class="text-center">© 2016 samueldaschagas</p>
 					</div>
 				</div>
 			</div>
