Criada base inicial

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>samuelchagas.</title>
+	<title>samueldaschagas.</title>
 	<script type="text/javascript" src="js/vendor/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -25,7 +25,7 @@
 
 	</script>
 
-	<div id="home" class="cover">
+	<div id="sobre" class="cover">
 		<div class="navbar">
 			<div class="container">
 				<div class="navbar-header">
@@ -36,93 +36,104 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="#">
-						<span>samuelchagas.</span>
-						<div class="front-dev">Desenvolvedor Front-End</div>
+						<span>samueldaschagas.</span>
 					</a>
 				</div>
 				<div class="collapse navbar-collapse" id="navbar-ex-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active">
-							<a href="#home">Home</a>
+							<a href="#sobre">sobre</a>
 						</li>
 						<li>
-							<a href="#about">Sobre</a>
+							<a href="#servicos">serviços</a>
 						</li>
 						<li>
-							<a href="#portfolio">Portfolio</a>
+							<a href="#portfolio">portifólio</a>
 						</li>
 						<li>
-							<a href="#contatos">Contato</a>
+							<a href="#habilidades">habilidades</a>
+						</li>
+						<li>
+							<a href="#depoimentos">depoimentos</a>
+						</li>
+						<li>
+							<a href="#contato">contato</a>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
-		<div class="cover-image" style="background-image: url(https://unsplash.imgix.net/photo-1418065460487-3e41a6c84dc5?q=25&amp;fm=jpg&amp;s=127f3a3ccf4356b7f79594e05f6c840e);"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 text-center">
-					<h1 class="text-inverse">samuelchagas.</h1>
-					<p class="text-inverse">HTML . CSS . Javascript . jQuery . Bootstrap . AngularJS</p>
+				<div class="col-lg-2">
+					<img src="img/main-image.jpg" class="img-circle" alt="">
+					<ul class="social-links">
+						<li class="social-links__box"><a href="https://www.facebook.com/samuel.d.chagas" target="_blank"><i class="fa fa-facebook-square social-links__icon" aria-hidden="true"></i></a></li>
+						<li class="social-links__box"><a href="https://br.linkedin.com/in/samueldaschagas" target="_blank"><i class="fa fa-linkedin-square social-links__icon" aria-hidden="true"></i></a></li>
+						<li class="social-links__box"><a href="https://github.com/samueldaschagas" target="_blank"><i class="fa fa-github-square social-links__icon" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
+				<div class="col-lg-10">
+					<p class="cover__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Conheça um pouco mais sobre mim através dos links abaixo.</p>
+					<span>Contatos:</span>
+					<p>
+						<span><a href="mailto:samueldaschagas@gmail.com?Subject=SAC - samueldaschagas"><i class="fa fa-envelope-o" aria-hidden="true"></i> samueldaschagas@gmail.com</a></span>
+						<span><a href="whatsapp://82996484849"><i class="fa fa-whatsapp" aria-hidden="true"></i> 82 99648-4849</a></span>
+					</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div id="about" class="section">
+
+	<div id="about" class="section section-about">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="text-primary">Sobre</h1>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-						ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
-						dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-						nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-						Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In
-						enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
-						felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
-						elementum semper nisi.</p>
+					<h1 class="section__text-primary text-center">serviços</h1>
+					<hr class="section__hr">
+					<h4 class="section__subtitle text-center">Qual sua necessidade? Conheça o que podemos te oferecer</h4>
+					<div class="row">
+						<div class="col-lg-4 text-center">
+							<i class="fa fa-5x fa-code" aria-hidden="true"></i>
+							<h4>Desenvolvimento Front-end</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Conheça um pouco mais sobre minha trajetória em meu</p>
+						</div>
+						<div class="col-lg-4 text-center">
+							<i class="fa fa-5x fa-desktop" aria-hidden="true"></i>
+							<h4>Criação de Banners</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Conheça um pouco mais sobre minha trajetória em meu</p>
+						</div>
+						<div class="col-lg-4 text-center">
+							<i class="fa fa-5x fa-tags" aria-hidden="true"></i>
+							<h4>Artes Personalizadas</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Conheça um pouco mais sobre minha trajetória em meu</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div id="portfolio" class="section">
+
+	<div id="contato" class="section section-contact">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
-					<img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive">
+				<div class="col-lg-6">
+					<h1>Conte-nos qual sua necessidade</h1>
+					<h3>Nos envie agora qual serviço você precisa no momento e entraremos em contato o mais rápido possível.</h3>
 				</div>
-				<div class="col-md-6">
-					<h1 class="text-primary">A title</h1>
-					<h3>A subtitle</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-						ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
-						dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-						nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-						Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In
-						enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
-						felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
-						elementum semper nisi.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="contatos" class="section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6">
-					<h1 class="text-primary">A title</h1>
-					<h3>A subtitle</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-						ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
-						dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-						nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-						Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In
-						enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
-						felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
-						elementum semper nisi.</p>
-				</div>
-				<div class="col-md-6">
-						<img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive">
+				<div class="col-lg-6">
+					<form action="POST">
+						<div class="form-group">
+							<input class="form-control" type="text" placeholder="Nome" required>
+						</div>
+						<div class="form-group">
+							<input class="form-control" type="email" placeholder="E-mail" required>
+						</div>
+						<div class="form-group">
+							<textarea class="form-control" type="text" placeholder="Mensagem" required></textarea>
+						</div>
+						<button type="submit" class="btn btn-default">Enviar</button>
+					</form>
 				</div>
 			</div>
 		</div>
